aegis-ebpf/include/aegis.h

#ifndef AEGIS_EBPF_H
#define AEGIS_EBPF_H

#pragma once

/* THIS FILE IS AUTO-GENERATED BY cbindgen. DO NOT EDIT. */

#include <stdarg.h>
#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>

#define PROT_READ 1

#define PROT_WRITE 2

#define PROT_EXEC 4

#define MAP_ANONYMOUS 32

// Error codes returned by FFI functions.
// Negative values indicate errors, 0 indicates success.
enum AegisErrorCode {
    Success = 0,
    NullPointer = -1,
    ArenaFull = -2,
    ArenaEmpty = -3,
    Panic = -4,
};
typedef int32_t AegisErrorCode;

enum CSeverity {
    Info = 0,
    Warning = 1,
    Critical = 2,
};
typedef uint8_t CSeverity;

typedef struct RawMemoryEvent {
    uint64_t timestamp_ns;
    uint32_t tgid;
    uint32_t pid;
    uint32_t syscall_id;
    uint32_t _pad0;
    uint64_t args[6];
    uint64_t cgroup_id;
    uint8_t comm[16];
} RawMemoryEvent;

typedef struct CAlert {
    uint8_t rule_id[64];
    uint8_t rule_name[128];
    CSeverity severity;
    uint8_t _pad0[3];
    uint32_t tgid;
    uint32_t _pad1;
    uint64_t cgroup_id;
    uint64_t triggered_at_ns;
} CAlert;

// Opaque handle to an EventArena.
// C code receives this as a void* pointer.
// Must be freed with aegis_arena_free().
typedef struct AegisArenaHandle {
    uint8_t _private[0];
} AegisArenaHandle;

// Opaque handle to an AlertChannel.
typedef struct AegisAlertChannelHandle {
    uint8_t _private[0];
} AegisAlertChannelHandle;


#ifdef __cplusplus
extern "C" {
#endif

AegisArenaHandle *aegis_arena_new(size_t capacity);
void aegis_arena_free(AegisArenaHandle *handle);
int32_t aegis_arena_push(AegisArenaHandle *handle, const RawMemoryEvent *event);
int32_t aegis_arena_pop(AegisArenaHandle *handle, RawMemoryEvent *out_event);
int32_t aegis_arena_try_push(AegisArenaHandle *handle, const RawMemoryEvent *event);
int32_t aegis_arena_try_pop(AegisArenaHandle *handle, RawMemoryEvent *out_event);
size_t aegis_arena_len(const AegisArenaHandle *handle);
size_t aegis_arena_capacity(const AegisArenaHandle *handle);

AegisAlertChannelHandle *aegis_alert_channel_new(size_t capacity);
void aegis_alert_channel_free(AegisAlertChannelHandle *handle);
int32_t aegis_alert_channel_try_recv(AegisAlertChannelHandle *handle, uint8_t *out_buffer, size_t buffer_size);
int32_t aegis_alert_channel_recv(AegisAlertChannelHandle *handle, uint8_t *out_buffer, size_t buffer_size);
/* Test harness: inject maximal protobuf alert (see Rust aegis_alert_channel_feed_test_alert). */
int32_t aegis_alert_channel_feed_test_alert(AegisAlertChannelHandle *handle);

typedef struct JitStormStats {
  uint64_t requested;
  uint64_t pushed;
  uint64_t popped;
  uint64_t full_retries;
} JitStormStats;

int32_t aegis_simulate_jit_storm(AegisArenaHandle *handle, uint32_t count, JitStormStats *out_stats);

typedef void (*AegisJsonCallback)(const char *json_utf8);
void register_event_callback(AegisJsonCallback cb);
void unregister_event_callback(void);

#ifdef __cplusplus
} // extern "C"
#endif
#endif  /* AEGIS_EBPF_H */